# triangulating-trust

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
docs/: REPRODUCING.md
firmware/: Makefile  README.md
firmware/boards/s32k144/: can_hal_s32k144.c  link_s32k144.ld  startup_s32k144.c
firmware/boards/stm32f103/: can_hal_stm32f103.c  link_stm32f103.ld  startup_stm32f103.c
firmware/common/: can_hal.h  dut.c  dut.h  main.c
formal/: Makefile  README.md  tt_modelA_honest.pv  tt_modelB_capture.pv
native/arm/: Makefile  cyclecount.py  tt_tag.c  tt_voronoi.c  tt_voronoi_a78.c
native/qemu/: Makefile  bench.c  hmac_sha1.c  link.ld  startup.c  trace.py
results/: beta_road.json  beta_road_domain.json  detection_results.json  mac_detection_results.json  masq_results.json
src/triangulating_trust/: __init__.py  avalanche.py  avalanche_fast.py  beta_containment.py  detection_eval.py  frr_sim.py  mac_detection.py  tt_tag.py
tests/: test_frr.py  test_tag.py
