[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triangulating-trust"
version = "1.0.0"
description = "Geometric sender authentication and anomaly detection for the CAN bus"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Neetu Singh" },
  { name = "Ritu Agarwal" },
]
keywords = ["CAN bus", "automotive security", "authentication", "intrusion detection", "PUF"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Security :: Cryptography",
  "Intended Audience :: Science/Research",
]
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
ml = ["scikit-learn>=1.3", "lightgbm>=4.0"]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.scripts]
tt-avalanche   = "triangulating_trust.avalanche:main"
tt-beta        = "triangulating_trust.beta_containment:main"
tt-detection   = "triangulating_trust.detection_eval:main"
tt-mac         = "triangulating_trust.mac_detection:main"
tt-frr         = "triangulating_trust.frr_sim:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
